# cdc-ws

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOKUMENTASI.md  LICENSE  Makefile  README.md  SPECS.md  architecture-walkthrough.md  architecture.html  architecture_walkthrough.md  cargo.toml  daemon-configuration.md  development-guide.md  development_guide.md  docker-compose.yml  enterprise-implementation-guide.md  enterprise_implementation_guide.md  image_generation_guide.md  pipelines.yaml  specs.md
cdc-bff/: Cargo.toml  README.md  build.rs  cargo.toml
cdc-bff/src/: auth.rs  build.rs  error.rs  main.rs  swagger.rs
cdc-ctl/: Cargo.toml  README.md  build.rs
cdc-ctl/src/: main.rs
cdc-daemon/: Cargo.toml  build.rs  cargo.toml  pipelines.yaml
cdc-daemon/proto/: cdc_management.proto
cdc-daemon/src/: build.rs  constants.rs  consumer.rs  dlq.rs  error.rs  grpc_server.rs  main.rs  metrics.rs  opensearch.rs  postgres.rs  qdrant.rs
cdc-web-console/: .gitignore  app.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  project-structure.md  readme.txt  tailwind.config  tailwind.config.js  tsconfig.json  vite.config.ts
cdc-web-console/.husky/: pre-commit  pre-push
cdc-web-console/src/: App.tsx  app.css  app.tsx  entry-client.tsx  entry-server.tsx  main.tsx
docker/: Dockerfile  cdc-bff.Dockerfile  cdc-ctl.Dockerfile  cdc-daemon.Dockerfile  cdc-web-console.Dockerfile  nginx.conf
examples/risingwave/: postgres-to-opensearch.sql
k8s/: cdc-starter.yaml
proto/: cdc_management.proto
supply-chain/: config.toml
(+20 files in other folders)
