[package]
name = "cdc-bff"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tower-http = { version = "0.7.0", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0"
tonic = { version = "0.14.6", features = ["transport"]}
prost = "0.14.4"
tonic-prost = "0.14.6"

# Auth Dependencies
jsonwebtoken = "10.4.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
bcrypt = "0.19.2"

[build-dependencies]
tonic-prost-build = "0.14.6"