[package]
name = "cdc-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "fs"] }
toml = "1.1.2"
tonic = { version = "0.14.6", features = ["transport"] }
tonic-prost = "0.14.6"
prost = "0.14.4"
thiserror = "2.0"

[build-dependencies]
tonic-prost-build = "0.14.6"
